[tool.poetry]
name = "learning"
version = "0.1.0"
description = "My Daily Learning Notes"
authors = ["ryan <xiaoyin_c@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
numpy = "^1.21.0"

# notebook
jupyterlab = "^2.2.10"
ipywidgets = "^7.5.1"

# machine learning
scikit-learn = "^0.23.2"

# deep learning
fastai = "^2.0.0"
torch = "^1.6.0"
torchvision = "v0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
